# happydev

./: .gitignore  Cargo.toml
happydev-ci/: Cargo.toml
happydev-ci/src/: main.rs
happydev-ui/: tsconfig.json
kvs/: .data.kvs  Cargo.toml  README.md
kvs/src/: cli.rs  engine.rs  entry.rs  error.rs  lib.rs  server.rs  store.rs  v2.rs
kvs/src/protocol/: message.rs
kvs/tests/: tests.rs
todo/: .envrc  Cargo.toml  Dockerfile  Makefile.toml  todo.kvs
todo/front/: .eslintignore  .eslintrc.js  .prettierrc  .stylelintrc.js  package.json
todo/front/public/: index.html
todo/front/src/: App.css  App.tsx  Config.ts  index.tsx  store.ts  theme.ts
todo/front/src/actions/: taskAction.ts  types.ts
todo/front/src/components/gateway/: todoApi.ts
todo/front/src/components/layout/: Layout.tsx
todo/front/src/components/pages/Task/: index.tsx
todo/front/src/components/tasks/: AddTask.tsx  AddTaskForm.tsx  AddTaskModal.tsx  SearchTask.tsx  Task.tsx  Tasks.tsx
todo/front/src/gateway/: todoApi.ts
todo/front/src/model/: index.tsx  task.ts
todo/front/src/reducers/: index.ts  taskReducer.ts
todo/src/: domain.rs  handler.rs  lib.rs  main.rs
