[package]
name = "happydev-ci"
version = "0.1.0"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.5"
tokio = {version = "0.2.20", features = ["rt-threaded"] }
anyhow = "1.0.28"
tracing-subscriber = {version = "0.2.5", features = ["fmt","env-filter"] }
tracing = "0.1.13"
tracing-futures = "0.2.4"
