[package]
name = "kvs"
version = "0.1.1"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
crc32fast = "1.2.0"
bincode = "1.2.1"
thiserror = "1.0.19"
serde = {version = "1.0.110", features = ["derive"]}
structopt = {version = "0.3", features = ["wrap_help"], optional = true }
anyhow = "1.0.31"
backtrace = "0.3.48"

[features]
cli = ["structopt"]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempdir = "0.3.7"


[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"
required-features = ["cli"]
