[package]
name = "todo"
version = "0.1.1"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"
exclude = ["front"]

[dependencies]
hyper = "0.13.5"
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3"
futures-util = "0.3.5"
pretty_env_logger = "0.4.0"
url = "2.1.1"
tracing = "0.1.14"
tracing-subscriber = "0.2.5"
anyhow = "1.0.31"
mime = "0.3.16"
uuid = {version = "0.8.1", features = ["v4","serde"]}
serde = {version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
http = "0.2.1"
uri = "0.3.0"
kvs = {path = "../kvs"}
chrono = {version = "0.4.11", features = ["serde"] }

[[bin]]
name = "todo"
path = "src/main.rs"
